--- a/css/home/vantagens.css
+++ b/css/home/vantagens.css
@@ -1,19 +1,20 @@
 .vantagens-bg {
   background: var(--cor-2);
-  padding-bottom: 60px;
-  padding-top: 30px;
+
 }
 
 .vantagens {
   display: grid;
   grid-template-columns: 1fr 1fr;
   text-align: center;
-  align-items: end;
+  align-items: center;
+  padding-top: 40px;
+  padding-bottom: 40px;
+  gap: 20px;
 }
 
 .vantagens-bg h1 {
-  padding: 30px;
-  margin-top: 32px;
+  padding-top: 80px;
   text-align: center;
 }
 
@@ -26,21 +27,25 @@
   margin-bottom: 15px;
 }
 
-.vantagens-itens p {
-  margin-bottom: 30px;
-}
-
 .vantagens-diagrama {
   grid-column: 2;
-  grid-row: -1 / 5;
+  grid-row: 2 /6;
   align-items: center;
+  justify-content: center;
+  margin: 0 auto;
+}
+
+.vantagens button {
+  margin-bottom: 32px;
 }
 
 @media (max-width: 800px) {
   .vantagens {
     grid-template-columns: 1fr;
+    padding-top: 40px;
+    padding-bottom: 40px;
   }
-
+  
   .vantagens-itens {
     max-width: 600px;
   }
